Ugly hack to prevent "Slide X of 11" having a line break on small screens

--- a/contents/basic-income/basic-income.css
+++ b/contents/basic-income/basic-income.css
@@ -49,3 +49,10 @@
 .ubiSource {
   margin-top: 8px;
 }
+
+@media (max-width: 767px) {
+  #dfa-content .item {
+    padding-left: 8px;
+    padding-right: 8px;
+  }
+}
